--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite",
         "build": "vite build",
         "build:dev": "vite build --mode development",
+        "build:netlify": "vite build && echo 'Build completed successfully'",
         "lint": "eslint .",
         "preview": "vite preview"
     },
